--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,25 @@ jobs:
 
       - name: Create config.js
         run: |
-          echo "const CONFIG = {
+          cat > config.js << EOL
+          const CONFIG = {
             apiKey: '${{ secrets.GOOGLE_API_KEY }}',
             clientId: '${{ secrets.GOOGLE_CLIENT_ID }}',
             spreadsheetId: '${{ secrets.GOOGLE_SPREADSHEET_ID }}',
             sheetName: 'ErrorReports'
-          };" > config.js
+          };
+          EOL
+
+      - name: Verify config.js
+        run: |
+          if [ ! -f config.js ]; then
+            echo "config.js was not created"
+            exit 1
+          fi
+          if ! grep -q "const CONFIG" config.js; then
+            echo "config.js is not properly formatted"
+            exit 1
+          fi
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
