--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
           echo "Checking if secrets are set..."
           if [ -n "${{ secrets.GOOGLE_API_KEY }}" ]; then
             echo "✅ GOOGLE_API_KEY is set"
+            echo "API Key length: ${#GOOGLE_API_KEY}"
+            echo "API Key starts with AIza: ${{ startsWith(secrets.GOOGLE_API_KEY, 'AIza') }}"
           else
             echo "❌ GOOGLE_API_KEY is not set"
           fi
@@ -46,22 +48,26 @@ jobs:
           # Create a temporary file
           cp index.html index.html.tmp
           
-          # Replace environment variables
-          sed -i "s/{{ GOOGLE_API_KEY }}/${{ secrets.GOOGLE_API_KEY }}/g" index.html.tmp
-          sed -i "s/{{ GOOGLE_CLIENT_ID }}/${{ secrets.GOOGLE_CLIENT_ID }}/g" index.html.tmp
-          sed -i "s/{{ GOOGLE_SPREADSHEET_ID }}/${{ secrets.GOOGLE_SPREADSHEET_ID }}/g" index.html.tmp
+          # Debug - Show original content
+          echo "Original content:"
+          grep -A 5 "const CONFIG" index.html.tmp
           
-          # Debug - Check replacements
-          echo "Checking replacements in index.html..."
-          if grep -q "${{ secrets.GOOGLE_API_KEY }}" index.html.tmp; then
+          # Replace environment variables
+          sed -i "s/{{ GOOGLE_API_KEY }}/${{secrets.GOOGLE_API_KEY}}/g" index.html.tmp
+          sed -i "s/{{ GOOGLE_CLIENT_ID }}/${{secrets.GOOGLE_CLIENT_ID}}/g" index.html.tmp
+          sed -i "s/{{ GOOGLE_SPREADSHEET_ID }}/${{secrets.GOOGLE_SPREADSHEET_ID}}/g" index.html.tmp
+          
+          # Debug - Show replaced content (without showing actual values)
+          echo "Replaced content:"
+          grep -A 5 "const CONFIG" index.html.tmp | sed 's/apiKey:.*,/apiKey: "***",/' | sed 's/clientId:.*,/clientId: "***",/'
+          
+          # Verify replacements
+          if grep -q "${{secrets.GOOGLE_API_KEY}}" index.html.tmp; then
             echo "✅ API key was replaced"
           else
             echo "❌ API key was not replaced"
-          fi
-          if grep -q "${{ secrets.GOOGLE_CLIENT_ID }}" index.html.tmp; then
-            echo "✅ Client ID was replaced"
-          else
-            echo "❌ Client ID was not replaced"
+            echo "Current content:"
+            grep -A 5 "const CONFIG" index.html.tmp
           fi
           
           # Move the temporary file back
@@ -70,8 +76,8 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{secrets.GITHUB_TOKEN}}
           publish_dir: .
           publish_branch: gh-pages
-          commit_message: "Deploy: ${{ github.event.head_commit.message }}"
+          commit_message: "Deploy: ${{github.event.head_commit.message}}"
           force_orphan: true 
